--- a/packages.config
+++ b/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net461" />
   <package id="MouseKeyHook" version="5.4.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
   <package id="Rx-Core" version="2.3.0-beta2" targetFramework="net461" />
   <package id="Rx-Interfaces" version="2.3.0-beta2" targetFramework="net461" />
   <package id="Rx-Linq" version="2.3.0-beta2" targetFramework="net461" />
